<resources>
    <string name="app_name">Costamar Movil</string>
    <string name="btn_one_way">Sólo Ida</string>
	<string name="btn_multi_way">Ida y vuelta</string>
	<string name="btn_multi_destination">Multidestino</string>
    <string name="btn_create_alert">Crear alerta</string>
    <string name="btn_apply">Aplicar</string>
    <string name="btn_enter">Ingresar</string>
    <string name="btn_duration">Duración</string>
	<string name="btn_search_flight">Buscar Vuelos</string>
	<string name="btn_see_history">Ver Historial</string>
	<string name="btn_add_dest">Añadir Vuelo</string>
    <string name="btn_all">Todos</string>
    <string name="btn_filter">Filtros adicionales</string>
    <string name="btn_sort">Ordenado por</string>
    <string name="btn_none">Ninguno</string>
    <string name="btn_reset">Reset</string>
	<string name="btn_cancel">Cancelar</string>
    <string name="btn_price">Precio</string>
    <string name="btn_reservation">RESERVAR</string>
    <string name="btn_next">Siguiente</string>
    <string name="btn_ok">Aceptar</string>
    <string name="btn_clean_history">Limpiar</string>
	<string name="departure_date">Fecha de Salida</string>
	<string name="return_date">Fecha retorno</string>
	<string name="tariff">Tarifa</string>
	<string name="adults">Adultos</string>
	<string name="childs">Niños</string>
	<string name="infants">Infantes</string>
	<string name="adults_abrv">Adt.</string>
	<string name="childs_abrv">Niño.</string>
	<string name="infants_abrv">Inf.</string>
	<string name="adult_condition">12 o + años</string>
	<string name="child_condition">2 - 11 años</string>
	<string name="infant_condition">0 - 23 meses</string>
	<string name="date">Fecha</string>
	<string name="retry">Reintentar</string>
    <string name="error">Error</string>
	<string name="label_origin">Origen</string>
	<string name="label_destination">Destino</string>
	<string name="label_frequency">Frecuencia</string>
	<string name="label_notifyby">Notificar por</string>
    <string name="label_myalerts">Mis Alertas</string>
    <string name="label_country">País:</string>
    <string name="label_select_country">Por favor seleccione su país:</string>
    <string name="label_welcome_to">Bienvenidos a:</string>
    <string name="label_filter">Filtros</string>
    <string name="label_history">Historial de búsqueda</string>
    <string name="label_history_config">Historial</string>
    <string name="label_config">Parámetros de configuración</string>
    <string name="label_airline">Aerolíneas</string>
    <string name="label_stop">Paradas</string>
    <string name="label_duration">Duración</string>
    <string name="label_pax_qty">Pasajeros</string>
    <string name="label_max_price">Precio máx.</string>
    <string name="label_best_price">Mejor precio</string>
    <string name="label_contact">Información de contacto</string>
    <string name="label_name">Nombre</string>
    <string name="label_lastname1">Apellido pat.</string>
    <string name="label_lastname2">Apellido mat.</string>
    <string name="label_agree">Acepto los términos y condiciones</string>
    <string name="label_adult_no">Adulto %d</string>
    <string name="label_child_no">Niño %d</string>
    <string name="label_infant_no">Infante %d</string>
    <string name="label_title">Titulo</string>
    <string name="label_dob">Fec. nacimiento</string>
    <string name="label_country_issue_id">País</string>
    <string name="label_doc_type">Tipo doc.</string>
    <string name="label_doc_number">Número doc.</string>
    <string name="label_email">Email</string>
    <string name="label_confirm_email">Confirmar email</string>
    <string name="label_country_phone">País</string>
    <string name="label_phone">Teléfono</string>
    <string name="label_parent_repsonsible">Adulto a cargo</string>
    <string name="label_pnr">Cód. reserva: %s</string>
    <string name="select">Seleccione</string>
    <string name="remove">Borrar</string>
    <string name="choose_payment">Escoga medio de pago</string>
    <string name="select_option">Por favor seleccione su medio de pago</string>
    <string name="regulations">(Haga clic en el círculo al lado del medio de pago preferido)</string>
    <string name="terms_conditions">Haga click para ver los términos y condiciones</string>
    <string name="title_tandc">Términos y condiciones</string>
    <string name="hint_dob">Fecha de nacimiento</string>
    <string name="result_count" formatted="false">Resultados encontrados: %d de %d</string>
    <string name="base_price">Precio Total: &lt;font color="#f39200">$%S&lt;/font></string>
    <string name="airline_1">&lt;font color="#706f6f">&lt;b>Aerolinea:&lt;/b>&lt;/font> %s</string>
    <string name="tarifa_1">&lt;font color="#706f6f">&lt;b>Tarifa:&lt;/b>&lt;/font> %s</string>
    <string name="operated_1" formatted="false">&lt;font color="#706f6f">&lt;b>Operado por:&lt;/b>&lt;/font> %s \u00A0 \u00A0 \u00A0 \u00A0 &lt;font color="#706f6f">&lt;b>Vuelo:&lt;/b>&lt;/font> %s</string>
    <string name="label_datefrom" formatted="false">&lt;font color="#706f6f">Ida:&lt;/font> %s</string>
    <string name="label_dateto" formatted="false">&lt;font color="#706f6f">Vuelta:&lt;/font> %s</string>
    <string name="label_route" formatted="false">&lt;font color="#706f6f">Ruta:&lt;/font> %s - %s</string>
    <string name="departure_detail" formatted="false">&lt;font color="#706f6f">Salida:&lt;/font> %s %s</string>
    <string name="departure_detail_1" formatted="false">&lt;font color="#706f6f">&lt;b>Salida:&lt;/b>&lt;/font> %s \u00A0 \u00A0 \u00A0 \u00A0 &lt;font color="#706f6f">&lt;b>Hora:&lt;/b>&lt;/font> %s</string>
    <string name="arrival_detail" formatted="false">&lt;font color="#706f6f">Llegada:&lt;/font> %s %s</string>
    <string name="arrival_detail_1" formatted="false">&lt;font color="#706f6f">&lt;b>Llegada:&lt;/b>&lt;/font> %s \u00A0 \u00A0 \u00A0 &lt;font color="#706f6f">&lt;b>Hora:&lt;/b>&lt;/font> %s</string>
    <string name="stop">&lt;font color="#e94e1b">Escalas: %s&lt;/font></string>
    <string name="airline">Aerolinea: %s</string>
    <string name="station_names" formatted="false">%s - %s</string>
    <string name="price_found" formatted="false">Precio encontrado: %s</string>
    <string name="booking_status">No se puede hacer la reserva</string>
    <string name="select_agree">Por favor lea los terminos y condiciones</string>
    <string name="select_payment_option">Por favor seleccione una opción de pago</string>
    <string name="no_search_result">No se encontraron resultados.. Por favor intente nuevamente..</string>
    <string name="no_alert_result">No se encontraron alertas creadas.</string>
    <string name="no_history_result">No se encontraron búsquedas previas.</string>
	<string name="hint">Tip: Toque el primer o último día del mes siguiente o anterior.</string>
	<string name="error_uncaught">Lo sentimos, ocurrió un error inesperado.</string>
    <string name="no_connection">Hubo un error de conexión. Por favor verifique su internet.</string>
    <string name="please_wait">Por favor espere</string>
    <string name="enter_alldetails">Por favor ingrese todos los detalles</string>
    <string name="enter_dates">Por favor ingrese las fechas de forma correcta</string>
    <string name="loading">Cargando..</string>
    <string name="alert_created">Se creó la alerta de forma correcta</string>
    <string name="history_cleaned">Se limpió el historial de búsqueda</string>
    <string name="changed_country">Se cambió el pais de forma correcta</string>
    <string name="selectalert_action">Por favor seleccione una acción</string>
    <string name="enter_oneflight">Por favor ingrese al menos un vuelo</string>
    <string name="enter_adultinfo">Por favor ingrese todos los datos del pasajero adulto %s</string>
    <string name="enter_childinfo">\r\nPor favor ingrese todos los datos del pasajero niño %s</string>
    <string name="enter_infantinfo">\r\nPor favor ingrese todos los datos del pasajero infante %s</string>
    <string name="enter_sameemail">Por favor ingrese los datos de contacto confirmando su email</string>
    <string name="booking_successful">Tome nota de su código de reserva y revise las indicaciones &lt;font color="#f39200">Aquí&lt;/font></string>
    <string name="booking_successful_payment">Pronto recibirá un email con la información de pago, tome nota de su código: &lt;font color="#f39200">%s&lt;/font></string>
</resources>