<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	     >
	    <TextView 
	        android:id="@+id/label_route"
		    android:text="@string/label_route"
	        android:layout_width="fill_parent"
            android:layout_height="fill_parent"
		    android:textSize="@dimen/alert_route_text"
		    android:textColor="@color/blue_divider"
	         />
    </LinearLayout>    
    <LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
    	android:orientation="horizontal">
	    <TextView android:id="@+id/txvTravelDate" 
		    android:text="@string/date"
	        android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1"
		    android:textSize="@dimen/alert_route_text"
		    android:textColor="@color/blue_divider"
		     />
		<TextView android:id="@+id/label_datefrom"
			    android:layout_width="0dp"
			    android:layout_height="wrap_content"
            android:layout_weight="2"
			    android:text="@string/label_datefrom"
		    android:textSize="@dimen/alert_route_text"
			    android:textColor="@android:color/black"/>
            <TextView android:id="@+id/label_dateto"
			    android:layout_width="0dp"
			    android:layout_height="wrap_content"
            android:layout_weight="3"
			    android:text="@string/label_dateto"
		    android:textSize="@dimen/alert_route_text"
			    android:textColor="@android:color/black"/>
	</LinearLayout>
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
    	android:orientation="horizontal">
		<TextView android:id="@+id/txvPax" 
		    android:text="@string/label_pax_qty"
	        android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1"
		    android:textSize="@dimen/alert_route_text"
		    android:textColor="@color/blue_divider"
		     />
		<TextView android:id="@+id/txvValuePax" 
	        android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="2"
		    android:textSize="@dimen/alert_route_text"
		    android:textColor="@android:color/black"  />
	</LinearLayout>
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
    	android:orientation="horizontal">
		<TextView android:id="@+id/txvPrice" 
		    android:text="@string/label_max_price"
	        android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1"
		    android:textSize="@dimen/alert_route_text"
		    android:textColor="@color/blue_divider"
		     />
		<TextView android:id="@+id/txvValuePrice" 
	        android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="2"
		    android:textSize="@dimen/alert_route_text"
		    android:textColor="@android:color/black"  />
	</LinearLayout>
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
    	android:orientation="horizontal">
		<TextView android:id="@+id/txvBestPrice" 
		    android:text="@string/label_best_price"
	        android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1"
		    android:textSize="@dimen/alert_route_text"
		    android:textColor="@color/blue_divider"
		     />
		<TextView android:id="@+id/txvValueBestPrice" 
	        android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="2"
		    android:textSize="@dimen/alert_route_text"
		    android:textColor="@android:color/black"  />
	</LinearLayout>
</LinearLayout>