<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="6dp"
    android:paddingRight="6dp"
    android:paddingTop="8dp"
    android:background="@android:color/white">
    <RelativeLayout android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:background="@drawable/orange_border_drawable">
	 	<TextView android:id="@+id/adult_no"
	 	    android:layout_width="wrap_content"
	 	    android:layout_height="wrap_content"
	 	    android:text="@string/label_adult_no"
	 	    android:textColor="@android:color/black"
	 	    android:textSize="16sp"/>
 	</RelativeLayout>
 	<LinearLayout android:layout_width="fill_parent"
 	    android:layout_height="wrap_content"
 	    android:weightSum="2"
 	    android:orientation="horizontal"
 	    android:layout_marginTop="6dp">
 		<TextView android:layout_width="0dp"
 		    android:layout_height="fill_parent"
 		    android:layout_weight="0.8"
 		    android:text="@string/label_title"
 		    android:gravity="center_vertical"
 		    android:textColor="@android:color/black"
 		    android:textSize="15sp"/>
 		<Spinner android:id="@+id/spinner_title"
 		    android:layout_width="0dp"
 		    android:layout_height="33dp"
 		    android:layout_weight="1.2"
 		    android:entries="@array/titlelabels"
 		    android:background="@drawable/spinner_tariff_selector"/>    
 	</LinearLayout>
 	<LinearLayout android:layout_width="fill_parent"
 	    android:layout_height="wrap_content"
 	    android:weightSum="2"
 	    android:layout_marginTop="4dp"
 	    android:orientation="horizontal">
 		<TextView android:layout_width="0dp"
 		    android:layout_height="fill_parent"
 		    android:layout_weight="0.8"
 		    android:text="@string/label_name"
 		    android:gravity="center_vertical"
 		    android:textColor="@android:color/black"
 		    android:textSize="15sp"/>
 		<EditText android:id="@+id/edit_name"
 		    android:layout_width="0dp"
 		    android:layout_height="fill_parent"
 		    android:layout_weight="1.2"
 		    android:inputType="text"
 		    android:singleLine="true"/>    
 	</LinearLayout>
 	<LinearLayout android:layout_width="fill_parent"
 	    android:layout_height="wrap_content"
 	    android:weightSum="2"
 	    android:orientation="horizontal">
 		<TextView android:layout_width="0dp"
 		    android:layout_height="fill_parent"
 		    android:layout_weight="0.8"
 		    android:text="@string/label_lastname1"
 		    android:gravity="center_vertical"
 		    android:textColor="@android:color/black"
 		    android:textSize="15sp"/>
 		<EditText android:id="@+id/edit_lastname1"
 		    android:layout_width="0dp"
 		    android:layout_height="fill_parent"
 		    android:layout_weight="1.2"
 		    android:inputType="text"
 		    android:singleLine="true"/>    
 	</LinearLayout>
 	<LinearLayout android:layout_width="fill_parent"
 	    android:layout_height="wrap_content"
 	    android:weightSum="2"
 	    android:orientation="horizontal">
 		<TextView android:layout_width="0dp"
 		    android:layout_height="fill_parent"
 		    android:layout_weight="0.8"
 		    android:text="@string/label_lastname2"
 		    android:gravity="center_vertical"
 		    android:textColor="@android:color/black"
 		    android:textSize="15sp"/>
 		<EditText android:id="@+id/edit_lastname2"
 		    android:layout_width="0dp"
 		    android:layout_height="fill_parent"
 		    android:layout_weight="1.2"
 		    android:inputType="text"
 		    android:singleLine="true"/>    
 	</LinearLayout> 	
 	<LinearLayout android:layout_width="fill_parent"
 	    android:layout_height="wrap_content"
 	    android:weightSum="2"
 	    android:orientation="horizontal"
 	    android:layout_marginTop="6dp">
 		<TextView android:layout_width="0dp"
 		    android:layout_height="fill_parent"
 		    android:layout_weight="0.8"
 		    android:text="@string/label_country_issue_id"
 		    android:textColor="@android:color/black"
 		    android:textSize="15sp"/>
 		<Spinner android:id="@+id/spinner_country_issue_id"
 		    android:layout_width="0dp"
 		    android:layout_height="33dp"
 		    android:layout_weight="1.2"
 		    android:entries="@array/countrylabels"
 		    android:background="@drawable/spinner_tariff_selector"/>    
 	</LinearLayout>
 	<LinearLayout android:layout_width="fill_parent"
 	    android:layout_height="wrap_content"
 	    android:weightSum="2"
 	    android:orientation="horizontal"
 	    android:layout_marginTop="6dp">
 		<TextView android:layout_width="0dp"
 		    android:layout_height="fill_parent"
 		    android:layout_weight="0.8"
 		    android:gravity="center_vertical"
 		    android:text="@string/label_doc_type"
 		    android:textColor="@android:color/black"
 		    android:textSize="15sp"/>
 		<Spinner android:id="@+id/spinner_doc_type"
 		    android:layout_width="0dp"
 		    android:layout_height="33dp"
 		    android:layout_weight="1.2"
 		    android:entries="@array/doctypelabels"
 		    android:background="@drawable/spinner_tariff_selector"/>    
 	</LinearLayout>
 	<LinearLayout android:layout_width="fill_parent"
 	    android:layout_height="wrap_content"
 	    android:layout_marginTop="4dp"
 	    android:weightSum="2"
 	    android:orientation="horizontal">
 		<TextView android:layout_width="0dp"
 		    android:layout_height="fill_parent"
 		    android:layout_weight="0.8"
 		    android:text="@string/label_doc_number"
 		    android:gravity="center_vertical"
 		    android:textColor="@android:color/black"
 		    android:textSize="15sp"/>
 		<EditText android:id="@+id/edit_doc_number"
 		    android:layout_width="0dp"
 		    android:layout_height="fill_parent"
 		    android:layout_weight="1.2"
 		    android:singleLine="true"/>    
 	</LinearLayout> 	
 	<View android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/black"
        android:layout_marginTop="8dp"/>
</LinearLayout>