<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:paddingBottom="8dp">
    <RelativeLayout android:id="@+id/logo_layout"
        android:layout_width="fill_parent"
    	android:layout_height="55dp"
    	android:background="@drawable/logo_bg">
		<ImageView android:id="@+id/logo" 
		    android:layout_width="200dp"
		    android:layout_height="35dp"
		    android:src="@drawable/logo"
		    android:layout_centerInParent="true"/>
	</RelativeLayout>
	<TextView android:id="@+id/search_result_count"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/logo_layout"
	    android:layout_marginLeft="8dp"
	    android:layout_marginTop="10dp"
	    android:textSize="18sp"
	    android:text="@string/result_count"
	    android:textColor="@android:color/black"
	    android:textStyle="bold"/>
	<View android:id="@+id/rule01"
	    android:layout_width="fill_parent"
	    android:layout_height="2dp"
	    android:layout_marginLeft="8dp"
	    android:layout_marginRight="8dp"
	    android:background="@android:color/black"
	    android:layout_below="@id/search_result_count"
	    android:layout_marginTop="10dp"/>
	<ListView android:id="@+id/lv"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_below="@id/rule01"
        android:layout_above="@+id/btn_layout"
        android:cacheColorHint="@android:color/transparent"
        android:dividerHeight="2dp"
        android:divider="@color/blue_divider"/>
	<LinearLayout android:id="@+id/btn_layout"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_marginTop="8dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:weightSum="2"
         android:orientation="horizontal">
         <Button android:id="@+id/btn_filter"
             android:layout_width="0dp"
             android:layout_height="fill_parent"
             android:layout_weight="1"
             android:text="@string/btn_filter"
             android:textColor="@android:color/white"
             android:background="@drawable/btn_selector"/>
         <Button android:id="@+id/btn_sort"
             android:layout_width="0dp"
             android:layout_height="fill_parent"
             android:layout_marginLeft="4dp"
             android:layout_weight="1"
             android:text="@string/btn_sort"
             android:textColor="@android:color/white"
             android:background="@drawable/btn_selector"/>
	</LinearLayout>
	<TextView android:id="@+id/no_items"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_centerInParent="true"
	    android:text="@string/no_search_result"
	    android:textColor="@color/red_color"
	    android:visibility="gone">
	    
	</TextView>
</RelativeLayout>