<?xml version="1.0" encoding="utf-8"?>
<!-- Layout que representa un item del historial de busqueda dentro de history_layout -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="4dp"
    android:paddingBottom="4dp">
    <ImageView android:id="@+id/airplaneicon"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginRight="10dp"
               android:src="@drawable/avion_verde" />
    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/airplaneicon"
        android:orientation="vertical">
          <TextView android:id="@+id/route"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_marginTop="8dp"
		    android:text="@string/label_route"
		    android:textSize="@dimen/route_text"
		    android:textColor="@android:color/black"/>
        <LinearLayout android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:orientation="horizontal">
            <TextView android:id="@+id/label_datefrom"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/label_datefrom"
			    android:textSize="@dimen/route_text"
			    android:textColor="@android:color/black"/>
            <TextView android:id="@+id/dash"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text=" - "
			    android:textSize="@dimen/route_text"
			    android:textColor="@android:color/black"/>
            <TextView android:id="@+id/label_dateto"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/label_dateto"
			    android:textSize="@dimen/route_text"
			    android:textColor="@android:color/black"/>
         </LinearLayout>   
     </LinearLayout>
        
</RelativeLayout>